# actionshot

./: .gitignore  README.md  actionshot.spec  main.py  pyproject.toml  requirements.txt  rpakit.py  test_run_simple_login.py  test_target.html
.github/workflows/: benchmark.yml
actionshot/: __init__.py  __main__.py  ai_agent.py  audit.py  benchmark.py  canary.py  capture.py  cdp.py  claude_api.py  config.py  dependencies.py  diff.py  env.py  export.py  generator.py  gui.py  hotkeys.py  ir_compiler.py  metadata.py  monitor.py  multi_recorder.py  ocr.py  ollama.py  patterns.py  prompt_template.py  recorder.py  redact.py  replay.py  rpakit.py  scheduler.py  scope.py  self_healing.py  session.py  smart_wait.py  telemetry.py  terminal_ui.py  tray.py  video.py  web_dashboard.py
benchmarks/conditional_approval/: config.json  generated_script.py  ir.json
benchmarks/conditional_branch/: config.json  generated_script.py  ir.json
benchmarks/copy_paste_between_apps/: config.json  generated_script.py  ir.json
benchmarks/email_attachment/: config.json  generated_script.py  ir.json
benchmarks/excel_to_form/: config.json  generated_script.py  ir.json
benchmarks/java_applet_legacy/: config.json  generated_script.py  ir.json
benchmarks/loop_over_spreadsheet/: config.json  generated_script.py  ir.json
benchmarks/multi_tab_workflow/: config.json  generated_script.py  ir.json
docs/: ADDING_FEWSHOT.md  ADDING_OPERATIONS.md  ARCHITECTURE.md  DEBUGGING.md  HANDOFF.md
tests/: test_cdp_verification.py  test_dependencies.py  test_recorder_integration.py  test_scope.py
(+33 files in other folders)
